added form component

--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
 
 
 
-    <h1>Example Component</h1>
-    <br />
+    @*<h1>Example Component, loaded correctly</h1>
+    <br />*@
 
 
 
@@ -26,9 +26,10 @@
     @*
         Direct link to Api documentation. Auto generated from Api Controllers not marked Ignore.
         <footer>
-        <h3>Swagger Link</h3>
-        <a href="/swagger">Swagger UI</a>
-    </footer>*@
+            <h3>Swagger Link</h3>
+            <a href="/swagger">Swagger UI</a>
+        </footer>
+    *@
 
 
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
@@ -37,7 +38,7 @@
     @*  A Markup to Html library. From ReactJs.Net tutorial but potentially useful for later post decorating.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>*@
 
-    <script src="@Url.Content("~/js/Example.jsx")"></script>
+    <script src="@Url.Content("~/js/Header.jsx")"></script>
 
 
 </body>
