updated home control to add comment route

--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 
 
     @*<h1>Example Component, loaded correctly</h1>
-    <br />*@
+        <br />*@
 
 
 
@@ -34,7 +34,8 @@
 
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
+
     @*  A Markup to Html library. From ReactJs.Net tutorial but potentially useful for later post decorating.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>*@
 
