--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<ReactNetDemo.Models.CommentModel>
-@{
+@
+{
     Layout = null;
 }
 
@@ -39,7 +40,7 @@
     @*  A Markup to Html library. From ReactJs.Net tutorial but potentially useful for later post decorating.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>*@
 
-    <script src="@Url.Content("~/js/Header.jsx")"></script>
+    <script src="@Url.Content("~/js/Comments.jsx")"></script>
 
 
 </body>
