--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -1,11 +1,16 @@
 ﻿@model IEnumerable<ReactNetDemo.Models.CommentModel>
-@
-{
+@{
     Layout = null;
 }
 
 <html>
 <head>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
     <title>Hello React</title>
 </head>
 
@@ -31,14 +36,6 @@
             <a href="/swagger">Swagger UI</a>
         </footer>
     *@
-
-
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
-
-    @*  A Markup to Html library. From ReactJs.Net tutorial but potentially useful for later post decorating.
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>*@
 
     <script src="@Url.Content("~/js/Comments.jsx")"></script>
 
