--- a/ReactNetDemo/Views/Shared/_Layout.cshtml
+++ b/ReactNetDemo/Views/Shared/_Layout.cshtml
@@ -1,17 +1,13 @@
-﻿<!DOCTYPE html>
+﻿// at the top of your layout
+@using React.AspNet
 
-<html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    <link href="~/css/tailwind.css" rel="stylesheet">
+    <link rel="stylesheet" href="/dist/main.css">
 </head>
 <body>
-    <div>
-
-
-
-        @RenderBody()
-    </div>
+    @RenderBody()
+    <script src="/dist/runtime.js"></script>
+    <script src="/dist/vendor.js"></script>
+    <script src="/dist/main.js"></script>
+    @Html.ReactInitJavaScript()
 </body>
-</html>
