--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -1,24 +1,12 @@
-﻿@model IEnumerable<ReactNetDemo.Models.CommentModel>
-@{
-    Layout = null;
-}
+﻿
 
-<html>
-<head>
-    <title>Hello React</title>
-</head>
+    @* Components are defined in the 'Content/components/expose-components.js'
+        Currently they must be loaded into the global.Components array until someone figures out how to add more global references.
+        *@
 
-<body>
-
-
-
-    <h1>Example Component</h1>
-    <br />
-
-
-
-    @* Eventually a default Layout will be used, but for test full html added. *@
-    <div id="example"></div>
+    
+    @Html.React("Components.Example", new { })
+    @Html.React("Components.HelloWorldComponent", new { })
 
 
 
@@ -31,15 +19,8 @@
     </footer>*@
 
 
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
+
     
     @*  A Markup to Html library. From ReactJs.Net tutorial but potentially useful for later post decorating.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>*@
 
-    <script src="@Url.Content("~/js/Example.jsx")"></script>
-
-
-</body>
-
-</html>
